--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@expo/vector-icons": "^15.0.3",
     "@gluestack-ui/core": "^3.0.10",
     "@gluestack-ui/utils": "^3.0.11",
-    "@legendapp/motion": "^2.4.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -24,6 +23,7 @@
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
     "expo-splash-screen": "~31.0.13",
@@ -32,7 +32,6 @@
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.510.0",
-    "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-aria": "^3.33.0",
     "react-dom": "19.1.0",
@@ -41,7 +40,6 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "^0.5.1",
     "react-stately": "^3.39.0",
