--- a/app.json
+++ b/app.json
@@ -39,7 +39,15 @@
           }
         }
       ],
-      "@react-native-community/datetimepicker"
+      "@react-native-community/datetimepicker",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#16a34a",
+          "sounds": []
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
